force-app/main/default/objects/CCP2_Access_Control__c/CCP2_Access_Control__c.object-meta.xml
<CustomObject>
    <label>CCP2 Access Control</label>
    <nameField>
        <label>CCP2 Access Control Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Access Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>