force-app/main/default/objects/CCP2_Access_Control__c/fields/Basic_Service_EC_Flag__c.field-meta.xml
<CustomField>
    <fullName>Basic_Service_EC_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Basic Service EC Flag</label>
    <type>Checkbox</type>
</CustomField>