force-app/main/default/objects/CCP2_Access_Control__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Access Controls</relationshipLabel>
    <relationshipName>Access_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>