force-app/main/default/objects/CCP2_Access_Control__c/fields/Cost_management_Flag__c.field-meta.xml
<CustomField>
    <fullName>Cost_management_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cost management Flag</label>
    <type>Checkbox</type>
</CustomField>