force-app/main/default/objects/CCP2_Access_Control__c/fields/E_invoice_Flag__c.field-meta.xml
<CustomField>
    <fullName>E_invoice_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E_invoice Flag</label>
    <type>Checkbox</type>
</CustomField>