force-app/main/default/objects/CCP2_Access_Control__c/fields/Financial_service_Flag__c.field-meta.xml
<CustomField>
    <fullName>Financial_service_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial service Flag</label>
    <type>Checkbox</type>
</CustomField>