force-app/main/default/objects/CCP2_Access_Control__c/fields/Online_maintenance_booking_Flag__c.field-meta.xml
<CustomField>
    <fullName>Online_maintenance_booking_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online maintenance booking Flag</label>
    <type>Checkbox</type>
</CustomField>