force-app/main/default/objects/CCP2_Access_Control__c/fields/Vehicle_management_Flag__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_management_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle management Flag</label>
    <type>Checkbox</type>
</CustomField>