force-app/main/default/objects/CCP2_Access_Control__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Cost_management_Flag__c</columns>
    <columns>E_invoice_Flag__c</columns>
    <columns>Financial_service_Flag__c</columns>
    <columns>Online_maintenance_booking_Flag__c</columns>
    <columns>Vehicle_management_Flag__c</columns>
    <columns>Basic_Service_EC_Flag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>